--- a/tsunami_app/www/index.html
+++ b/tsunami_app/www/index.html
@@ -11,11 +11,13 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
+    <script src="js/app.module.js"></script>
+    <script src="js/app.routes.js"></script>
+    <script src="js/info/info.controller.js"></script>
+    <script src="js/maps/maps.controller.js"></script>
+    <script src="js/prepare/prepare.controller.js"></script>
   </head>
-  <body ng-app="starter">
+  <body ng-app="tsunamiApp">
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
