--- a/tsunami_app/www/index.html
+++ b/tsunami_app/www/index.html
@@ -13,23 +13,14 @@
     <!-- your app's js -->
     <script src="js/app.module.js"></script>
     <script src="js/app.routes.js"></script>
+    <script src="js/login/login.controller.js"></script>
     <script src="js/info/info.controller.js"></script>
     <script src="js/maps/maps.controller.js"></script>
     <script src="js/prepare/prepare.controller.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="js/main.js"></script>
   </head>
   <body ng-app="tsunamiApp">
-    <!--
-      The nav bar that will be updated as we navigate between views.
-    -->
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
-    </ion-nav-bar>
-    <!--
-      The views will be rendered in the <ion-nav-view> directive below
-      Templates are in the /templates folder (but you could also
-      have templates inline in this html file if you'd like).
-    -->
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
