store token to local storage

--- a/tsunami_app/www/index.html
+++ b/tsunami_app/www/index.html
@@ -13,12 +13,11 @@
     <!-- your app's js -->
     <script src="js/app.module.js"></script>
     <script src="js/app.routes.js"></script>
+    <script src="js/localStorage.service.js"></script>
     <script src="js/login/login.controller.js"></script>
     <script src="js/info/info.controller.js"></script>
     <script src="js/maps/maps.controller.js"></script>
     <script src="js/prepare/prepare.controller.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="js/main.js"></script>
   </head>
   <body ng-app="tsunamiApp">
     <ion-nav-view></ion-nav-view>
