--- a/tsunami_app/www/index.html
+++ b/tsunami_app/www/index.html
@@ -20,6 +20,10 @@
     <script src="js/prepare/prepare.controller.js"></script>
   </head>
   <body ng-app="tsunamiApp">
+  <ion-nav-bar class="bar-stable">
+  <ion-nav-back-button>
+  </ion-nav-back-button>
+</ion-nav-bar>
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
