--- a/tsunami_app/www/index.html
+++ b/tsunami_app/www/index.html
@@ -15,15 +15,13 @@
     <script src="js/app.routes.js"></script>
     <script src="js/localStorage.service.js"></script>
     <script src="js/login/login.controller.js"></script>
+    <script src="js/login/signup.controller.js"></script>
     <script src="js/info/info.controller.js"></script>
     <script src="js/maps/maps.controller.js"></script>
     <script src="js/prepare/prepare.controller.js"></script>
   </head>
   <body ng-app="tsunamiApp">
-  <ion-nav-bar class="bar-stable">
-  <ion-nav-back-button>
-  </ion-nav-back-button>
-</ion-nav-bar>
+
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
