restructure files to use angular recommended styles add dependent dropdown options for city selection

--- a/tsunami_app/www/index.html
+++ b/tsunami_app/www/index.html
@@ -13,16 +13,15 @@
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
     <!-- your app's js -->
-    <script src="js/app.module.js"></script>
-    <script src="js/app.routes.js"></script>
-    <script src="js/localStorage.service.js"></script>
-    <script src="js/maps.service.js"></script>
-    <script src="js/login/login.controller.js"></script>
-    <script src="js/login/signup.controller.js"></script>
-    <script src="js/info/info.controller.js"></script>
-    <script src="js/maps/maps.controller.js"></script>
-    <script src="js/maps/mapPreview.controller.js"></script>
-    <script src="js/prepare/prepare.controller.js"></script>
+    <script src="app.module.js"></script>
+    <script src="app.routes.js"></script>
+    <script src="shared/services/localStorage.service.js"></script>
+    <script src="components/login/login.controller.js"></script>
+    <script src="components/login/signup.controller.js"></script>
+    <script src="components/info/info.controller.js"></script>
+    <script src="components/maps/maps.controller.js"></script>
+    <script src="components/maps/mapPreview.controller.js"></script>
+    <script src="components/prepare/prepare.controller.js"></script>
   </head>
   <body ng-app="tsunamiApp">
 
