requirel url Factory

--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <script src="app.module.js"></script>
     <script src="app.routes.js"></script>
     <script src="shared/services/localStorage.service.js"></script>
+    <script src="shared/services/urlFactory.service.js"></script>
     <script src="components/login/login.controller.js"></script>
     <script src="components/login/signup.controller.js"></script>
     <script src="components/info/info.controller.js"></script>
