--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
     <script src="app.routes.js"></script>
     <script src="shared/services/localStorage.service.js"></script>
     <script src="shared/services/urlFactory.service.js"></script>
+    <script src="shared/services/currentUser.service.js"></script>
     <script src="components/login/login.controller.js"></script>
     <script src="components/login/signup.controller.js"></script>
     <script src="components/info/info.controller.js"></script>
