require map detail controller

--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
     <script src="components/info/info.controller.js"></script>
     <script src="components/maps/maps.controller.js"></script>
     <script src="components/maps/mapPreview.controller.js"></script>
+    <script src="components/maps/mapDetail.controller.js"></script>
     <script src="components/prepare/prepare.controller.js"></script>
   </head>
   <body ng-app="tsunamiApp">
